-CSS for Home is adjusted for multiple sizes. Some issues between levels still, unfortunately -CSS update for Create page to stop content from spilling over

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background: linear-gradient(rgba(79, 81, 101, 1) 60vh, #07beb8);
+  background: rgba(79, 81, 101, 1);
   font-family: "Raleway", sans-serif;
 }
 
