--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 2em;
   background-color: rgba(7, 190, 184, 0.2);
-  max-width: 70%;
+  width: fit-content;
   animation: fadeIn ease-in-out 0.25s;
 }
 
@@ -28,7 +28,7 @@
 @media screen and (max-width: 412px) {
   .create {
     margin-top: 6em;
-    padding: 1em 2em;
+    padding: 1em 0.25em;
   }
 }
 
