--- a/client/src/components/Grid/Grid.css
+++ b/client/src/components/Grid/Grid.css
@@ -1,15 +1,5 @@
 .container {
   display: grid;
-
   margin: 0 auto;
   justify-content: center;
-  /* box-shadow: 1em 1em 1em rgba(0, 0, 0, 0.2); */
-  /* transform: rotate(90deg); */
 }
-
-/* @media screen and (max-width: 412px) {
-  .container {
-    grid-template-columns: repeat(2rem);
-    grid-template-rows: repeat(2rem);
-  }
-} */
