--- a/client/src/components/Node/Node.css
+++ b/client/src/components/Node/Node.css
@@ -87,17 +87,24 @@
     width: 1.5em;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .node-current:before,
   .node-end:before {
     height: 1.1em;
     width: 1.1em;
   }
 }
-/* @media screen and (max-width: 420px) {
+@media screen and (max-width: 480px) {
   .node-current:before,
   .node-end:before {
     height: 0.9em;
     width: 0.9em;
   }
-} */
+}
+@media screen and (max-width: 400px) {
+  .node-current:before,
+  .node-end:before {
+    height: 0.75em;
+    width: 0.75em;
+  }
+}
